--- a/piano tiles/style.css
+++ b/piano tiles/style.css
@@ -37,7 +37,7 @@
     cursor: pointer;
     box-shadow: 0px 4px 8px 0 rgba(0,0,0,0.2),
               0px 6px 20px 0 rgba(0,0,0,0.19);
-    margin-top: 150px;
+    margin-top: 180px;
   }
   
   #game{
@@ -46,11 +46,12 @@
     position: relative;
   }
   .logo{
-    height: 130px;
-    width: 130px;
-    position: absolute;
-    margin-left: 610px;
-    margin-top: 88px;
+    height: 25%;  
+  width: auto;  
+  position: absolute;
+  top: 25%;  
+  left: 50%;
+  transform: translate(-50%, -50%);
   }
   .img{
     z-index: -1;
@@ -60,70 +61,77 @@
   }
   .name-box{
     width: 350px;
-    height: 150px;
-    background-color: rgb(255, 255, 255);
-    position: absolute;
-    margin-left: 500px; 
-    margin-top: 270px;
-    border-radius: 15px;
-    box-shadow: 0px 0px 18px 4px rgba(0, 0, 0, 0.3);
+  height: 25vh; /* Set height to 50% of the viewport height */
+  background-color: rgb(255, 255, 255);
+  position: absolute;
+  margin-left: 50%;
+  top: 45%;  
+  transform: translateX(-50%);
+  border-radius: 15px;
+  box-shadow: 0px 0px 18px 4px rgba(0, 0, 0, 0.3);
 
   }
   .name{
     color: #000000;
-    padding-left: 90px;
-    padding-top: 10px;
+    padding-left: 20px;
+    padding-top: 5px;
     font: normal bold 25px/1.2 "proxima-nova";
     letter-spacing: -1px;
-     
     
   }
   .game-name{
     width: 150px;
-    height: 30px;
-    font-family: 'Kanit', sans-serif;
-    padding-left: 10px;
-    padding-top: 5px;
-    opacity: 1;
-    position: absolute;
-    margin-top: 220px;
-    margin-left: 610px;
-    font-size: 23px;
-    
+  height: 30px;
+  font-family: 'Kanit', sans-serif;
+  padding-left: 10px;
+  padding-top: 5px;
+  opacity: 1;
+  position: absolute;
+  top: 40%; 
+  left: 51%; 
+  transform: translate(-50%, -50%);  
+  font-size: 23px;
 
   }
  
   .om {
-
+    position: absolute;
     height: 40px;
     width: 280px;
-    margin-top: 25px;
-    margin-left: -57px;
+    margin-top: -118px;
+    margin-left: 27px;
     padding-left: 10px;
     border: none;
     background-color: #007bff;
     border-radius: 4px;
-    /* I have use css maker to generate the blur and transparent background */
-    background: linear-gradient(
-      111deg,
-      rgba(205, 215, 250, 0.1) 0%,
-      rgba(61, 79, 240, 0.1) 100%
-    );
-    
-    box-shadow:
-      inset 0px 10px 5px 0px rgba(255, 255, 255, 0.15),
-      inset 0px -10px 5px 0px rgba(205, 215, 250, 0.15);
+    background: linear-gradient( 111deg, rgba(205, 215, 250, 0.1) 0%, rgba(61, 79, 240, 0.1) 100% );
+    box-shadow: inset 0px 10px 5px 0px rgba(255, 255, 255, 0.15), inset 0px -10px 5px 0px rgba(205, 215, 250, 0.15);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+  }
+  .om1{
+    height: 40px;
+    position: absolute;
+    width: 280px;
+    margin-top: -63px;
+    margin-left: 26px;
+    padding-left: 10px;
+    border-radius: 4px;
+    border: none;
+    background: linear-gradient( 111deg, rgba(205, 215, 250, 0.1) 0%, rgba(61, 79, 240, 0.1) 100% );
+    box-shadow: inset 0px 10px 5px 0px rgba(255, 255, 255, 0.15), inset 0px -10px 5px 0px rgba(205, 215, 250, 0.15);
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
   }
   .inst{
     position: absolute;
-    margin-top: 530px;
-    margin-left: 620px;
-    height: 46px;
-    width: 148px;
-    font-size: small;
-    cursor: pointer;
+  top: 94%;
+  left: 51%;
+  transform: translate(-50%, -50%);
+  height: 46px;
+  width: 148px;
+  font-size: small;
+  cursor: pointer;
   }
   #game #game-container,
   #game #tiles{
@@ -164,11 +172,13 @@
   }
   #game-container{
     margin-left: 360px;
+ 
   }
   #game #tiles{
     display: block;
     overflow: hidden;
     margin-left: 360px;
+    
   }
   
   #game #tiles div{
@@ -258,32 +268,44 @@
       transition: all 0.3s ease;
   }
   
-  @media(max-width: 550px){
+  @media(max-width: 300px){
       .result_box .game-name{
           width: 100%;
       }
       .inst{
         margin: 0vw;
-        margin-top: 140vw;
-        margin-left: 40vw;
+        margin-top: 1vw;
+        margin-left: 4vw;
 
       }
+      .start{
+        /* margin-top: -10vw;  */
+      }
       .name-box{
-        margin: 0vw;
-        margin-top: 75vw;
-        margin-left: 17vw;
+         height: 40vw;
+         width: 80vw;
+         margin-top: 6vw;
+      }
+      .name{
+        font-size: 7vw;
+        margin-left: -13vw;
+        
+      }
+      .om{
+        width: 60vw;
+        margin-left: -8vw;
       }
       .game-name{
         margin: 0vw;
         font-size: 7vw;
-        margin-top: 60vw;
+        margin-top: 2vw;
         margin-left: 30vw;
         width: 100vw;
       }
       .logo{
         margin: 0vw;
-        margin-top: 12vw;
-        margin-left: 27vw;
+        margin-top: 4vw;
+        margin-left: 2vw;
         height: 45vw;
         width: 45vw;
       }
