--- a/piano tiles/style.css
+++ b/piano tiles/style.css
@@ -73,10 +73,11 @@
   }
   .name{
     color: #000000;
-    padding-left: 20px;
+    padding-left: 29px;
     padding-top: 5px;
     font: normal bold 25px/1.2 "proxima-nova";
     letter-spacing: -1px;
+    font-size: 23px;
     
   }
   .game-name{
