--- a/piano tiles/style.css
+++ b/piano tiles/style.css
@@ -23,8 +23,8 @@
    
   
   .start button{
-    width: 18vw;
-    height: 5vw;
+    width: 200px;
+    height: 50px;
     font-size: 3vw;
     font-weight: 700;
     
@@ -37,7 +37,7 @@
     cursor: pointer;
     box-shadow: 0px 4px 8px 0 rgba(0,0,0,0.2),
               0px 6px 20px 0 rgba(0,0,0,0.19);
-    margin-top: 180px;
+    margin-top: 130px;
   }
   
   #game{
@@ -49,7 +49,7 @@
     height: 25%;  
   width: auto;  
   position: absolute;
-  top: 25%;  
+  top: 20%;  
   left: 50%;
   transform: translate(-50%, -50%);
   }
@@ -60,13 +60,14 @@
     position: absolute;
   }
   .name-box{
-    width: 25vw;
+  width: 300px;
   height: 13vw; /* Set height to 50% of the viewport height */
   background-color: rgb(255, 255, 255);
   position: absolute;
-  margin-left: 50%;
-  top: 43%;  
-  transform: translateX(-50%);
+   
+  top: 53%;  
+  left: 50%;
+  transform: translate(-50%, -50%);
   border-radius: 1vw;
   box-shadow: 0px 0px 18px 4px rgba(0, 0, 0, 0.3);
 
@@ -88,9 +89,9 @@
   padding-top: 0vw;
   opacity: 1;
   position: absolute;
-  top: 40%; 
-  left: 51%; 
-  transform: translate(-50%, -50%);  
+  top: 35%;  
+  left: 51%;
+  transform: translate(-50%, -50%); 
   font-size: 2vw;
 
   }
@@ -98,7 +99,7 @@
   .om {
     position: absolute;
     height: 3vw;
-    width: 20.3vw;
+    width: 22.3vw;
     margin-top: -10vw;
     margin-left: 2vw;
     padding-left: 1vw;
@@ -113,7 +114,7 @@
   .om1{
     position: absolute;
     height: 3vw;
-    width: 20.3vw;
+    width: 22.3vw;
     margin-top: -6vw;
     margin-left: 2vw;
     padding-left: 1vw;
@@ -270,19 +271,68 @@
       cursor: pointer;
       transition: all 0.3s ease;
   }
+  @media(max-width:412px)  {
+    #game-container{
+      margin-left: 0vw;
+       
+   
+    }
+    #game #tiles{
+      display: block;
+      overflow: hidden;
+      margin-left: 0vw;
+      
+    }
+    #game .score{
+      width: 50%;
+      max-width: 50vw;
+      height: auto;
+      position: absolute;
+      display: flex;
+      justify-content: center;
+      padding: 1vw 0;
+      z-index: 5;
+      margin-left: 24vw;
+    }
+    #game #tiles div{
+      width: 25vw;
+      height: 30%;
+      position: absolute;
+      top: -30%;
+      background:rgb(0, 0, 0);
+      outline: none;
+      cursor: pointer;
+       
+    }
+    #game #game-container .line{
+      width: 25vw;
+      border-right: solid 1px rgb(197, 197, 197);
+    }
+    
+    #game #game-container #line4 #line2 #line1 #line3{
+      border-right: none;
+   
+    }
+
+    
+  }
   
-  @media(max-width: 300px){
+   @media(max-width: 412px){
       .result_box .game-name{
           width: 100%;
       }
       .inst{
         margin: 0vw;
-        margin-top: 1vw;
-        margin-left: 4vw;
+        margin-top: -30vw;
+        margin-left: -10vw;
 
       }
-      .start{
-        /* margin-top: -10vw;  */
+      .start button{
+        margin-top: 50vw;
+         width:50vw ; 
+         height: 15vw;
+         font-weight: 10000;
+         font-size: 7vw;
       }
       .name-box{
          height: 40vw;
@@ -290,13 +340,23 @@
          margin-top: 6vw;
       }
       .name{
-        font-size: 7vw;
-        margin-left: -13vw;
+        font-size: 5vw;
+        margin-left: 5vw;
+        margin-top: 1vw;
+        
+      }
+      .om1{
+         margin-top: -30vw;
+        width: 70vw;
+        margin-left: 5vw;
+        height: 9vw;
         
       }
       .om{
-        width: 60vw;
-        margin-left: -8vw;
+        margin-top: -18vw;
+        width: 70vw;
+        margin-left: 5vw;
+        height: 9vw;
       }
       .game-name{
         margin: 0vw;
@@ -305,6 +365,7 @@
         margin-left: 30vw;
         width: 100vw;
       }
+      
       .logo{
         margin: 0vw;
         margin-top: 4vw;
@@ -321,20 +382,149 @@
       #game .score p{
         margin: 0vw;
       }
-      @media(max-width: 430px){
+      @media(max-width: 412px){
         #game-container{
           margin : 0vw ;
         }
       }
-    @media(max-width: 320px){
-      .result_box .complete_text{
-          font-size: 18px;
+      
+    }
+    /*@media(max-width: 477px){
+      .result_box .game-name{
+        width: 100%;
+    }
+    .inst{
+      margin: 0vw;
+      margin-top: -20vw;
+      margin-left: -8vw;
+
+    }
+    .start button{
+      margin-top: 50vw;
+       width:50vw ; 
+       height: 15vw;
+       font-weight: 10000;
+       font-size: 7vw;
+    }
+    .name-box{
+       height: 40vw;
+       width: 80vw;
+       margin-top: 6vw;
+    }
+    .name{
+      font-size: 5vw;
+      margin-left: 5vw;
+      margin-top: 1vw;
+      
+    }
+    .om1{
+       margin-top: -30vw;
+      width: 70vw;
+      margin-left: 5vw;
+      height: 9vw;
+      
+    }
+    .om{
+      margin-top: -18vw;
+      width: 70vw;
+      margin-left: 5vw;
+      height: 9vw;
+    }
+    .game-name{
+      margin: 0vw;
+      font-size: 7vw;
+      margin-top: 2vw;
+      margin-left: 30vw;
+      width: 100vw;
+    }
+    
+    .logo{
+      margin: 0vw;
+      margin-top: 4vw;
+      margin-left: 2vw;
+      height: 45vw;
+      width: 45vw;
+    }
+    #game-container  {
+      margin: 0vw;
+    }
+    #game #tiles{
+      margin: 0vw;
+    }
+    #game .score p{
+      margin: 0vw;
+    }
+  } */
+  /* @media(max-width: 800px){
+    .result_box .game-name{
+      width: 100%;
+  }
+  .inst{
+    margin: 0vw;
+    margin-top: 2vw;
+    margin-left: -6vw;
+    font-size: large;
+
+  }
+  .start button{
+    margin-top: 40vw;
+     width:50vw ; 
+     height: 15vw;
+     font-weight: 10000;
+     font-size: 7vw;
+  }
+  .name-box{
+     height: 30vw;
+     width: 60vw;
+     margin-top: 6vw;
+  }
+  .name{
+    font-size: 4vw;
+    margin-left: 2vw;
+    margin-top: 1vw;
+    
+  }
+  .om1{
+     margin-top: -25vw;
+    width: 50vw;
+    margin-left: 5vw;
+    height: 9vw;
+    
+  }
+  .om{
+    margin-top: -15vw;
+    width: 50vw;
+    margin-left: 5vw;
+    height: 9vw;
+  }
+  .game-name{
+    margin: 0vw;
+    font-size: 7vw;
+    margin-top: 2vw;
+    margin-left: 30vw;
+    width: 100vw;
+  }
+  
+  .logo{
+    margin: 0vw;
+    margin-top: 2vw;
+    margin-left: 1vw;
+    height: 40vw;
+    width: 40vw;
+  }
+  #game-container  {
+    margin: 0vw;
+  }
+  #game #tiles{
+    margin: 0vw;
+  }
+  #game .score p{
+    margin: 0vw;
+  }
       }
-        }
-        
-      }
+
        
          
 
      
-  
+   */
