--- a/piano tiles/style.css
+++ b/piano tiles/style.css
@@ -24,7 +24,7 @@
   
   .start button{
     width: 200px;
-    height: 50px;
+    height: 60px;
     font-size: 3vw;
     font-weight: 700;
     
@@ -37,7 +37,7 @@
     cursor: pointer;
     box-shadow: 0px 4px 8px 0 rgba(0,0,0,0.2),
               0px 6px 20px 0 rgba(0,0,0,0.19);
-    margin-top: 130px;
+    margin-top: 170px;
   }
   
   #game{
@@ -60,8 +60,8 @@
     position: absolute;
   }
   .name-box{
-  width: 300px;
-  height: 13vw; /* Set height to 50% of the viewport height */
+  width: 27vw;
+  height: 13vw;  
   background-color: rgb(255, 255, 255);
   position: absolute;
    
@@ -317,7 +317,7 @@
     
   }
   
-   @media(max-width: 412px){
+  /* @media(max-width: 412px){
       .result_box .game-name{
           width: 100%;
       }
@@ -389,7 +389,7 @@
       }
       
     }
-    /*@media(max-width: 477px){
+    @media(max-width: 477px){
       .result_box .game-name{
         width: 100%;
     }
